--- a/index.html
+++ b/index.html
@@ -1,126 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Rubik', sans-serif;
     }
+
     body {
-      background-color: white;
-      color: black;
+      background-color: #fff;
+      color: #333;
     }
+
     .top-bar {
-      background: black;
+      background: #000;
       color: white;
-      padding: 8px 20px;
       display: flex;
       justify-content: space-between;
+      padding: 8px 20px;
       font-size: 14px;
     }
-    .header {
+
+    .navbar {
+      background-color: white;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 15px 20px;
-      border-bottom: 1px solid #ddd;
+      padding: 10px 20px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
+
     .logo {
-      font-size: 28px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
+    .logo h1 {
       color: red;
-      font-family: 'Snap ITC', cursive;
+      font-size: 30px;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     }
-    .logo small {
+
+    .logo span {
       font-size: 10px;
-      display: block;
-      margin-top: -5px;
+      color: #777;
+      margin-top: -4px;
     }
+
     .search-bar {
-      flex: 1;
+      flex-grow: 1;
       margin: 0 20px;
     }
+
     .search-bar input {
       width: 100%;
-      padding: 10px;
-      border-radius: 5px;
+      max-width: 450px;
+      padding: 8px 12px;
       border: 1px solid #ccc;
+      border-radius: 20px;
+      font-size: 14px;
     }
-    .actions button {
-      margin-left: 10px;
-      padding: 8px 14px;
-      border: none;
-      background-color: red;
-      color: white;
-      border-radius: 5px;
+
+    .actions {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+
+    .actions i {
+      font-size: 18px;
       cursor: pointer;
-      transition: 0.3s ease;
+      transition: transform 0.2s ease;
     }
-    .actions button:hover {
-      background-color: darkred;
+
+    .actions i:hover {
+      transform: scale(1.1);
     }
-    .nav-categories {
+
+    .menu-bar {
       display: flex;
       justify-content: center;
       gap: 40px;
-      padding: 15px;
-      background-color: #f9f9f9;
-      position: relative;
+      padding: 10px 0;
+      background: #f8f8f8;
     }
-    .nav-categories > div {
+
+    .menu-item {
       position: relative;
+      cursor: pointer;
+      text-align: center;
+      transition: color 0.3s ease;
     }
-    .nav-categories div:hover .dropdown {
+
+    .menu-item i {
+      font-size: 18px;
+      display: block;
+      margin-bottom: 3px;
+      color: #444;
+    }
+
+    .menu-item:hover {
+      color: red;
+    }
+
+    .dropdown {
+      position: absolute;
+      top: 40px;
+      left: 0;
+      background: white;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      display: none;
+      z-index: 10;
+    }
+
+    .menu-item:hover .dropdown {
       display: block;
     }
-    .dropdown {
-      display: none;
-      position: absolute;
-      top: 35px;
-      background-color: white;
-      border: 1px solid #ddd;
-      padding: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      z-index: 100;
-    }
+
     .dropdown a {
       display: block;
-      padding: 5px 10px;
-      color: black;
+      padding: 5px;
+      color: #333;
       text-decoration: none;
     }
+
     .dropdown a:hover {
-      background-color: #f0f0f0;
+      background: #eee;
+      border-radius: 4px;
     }
   </style>
 </head>
+
 <body>
   <div class="top-bar">
-    <div>Free Shipping | Return To Store | Gift Cards</div>
-    <div>Help | Download App</div>
+    <div>Free Shipping</div>
+    <div>Return To Store</div>
+    <div>Help</div>
   </div>
 
-  <div class="header">
+  <nav class="navbar">
     <div class="logo">
-      FA-Tshirt
-      <small>FA-Tshirt</small>
+      <h1>FA-Tshirt</h1>
+      <span>FA-Tshirt</span>
     </div>
     <div class="search-bar">
       <input type="text" placeholder="What are you looking for?">
     </div>
     <div class="actions">
-      <button onclick="showLogin()">Login</button>
-      <button onclick="showCart()">Cart</button>
+      <i class="fas fa-user"></i>
+      <i class="fas fa-shopping-cart"></i>
     </div>
-  </div>
+  </nav>
 
-  <div class="nav-categories">
-    <div>
+  <div class="menu-bar">
+    <div class="menu-item">
+      <i class="fas fa-male"></i>
       Men
       <div class="dropdown">
         <a href="#">T-Shirts</a>
@@ -128,31 +176,25 @@
         <a href="#">Jeans</a>
       </div>
     </div>
-    <div>
+    <div class="menu-item">
+      <i class="fas fa-female"></i>
       Women
       <div class="dropdown">
         <a href="#">Tops</a>
         <a href="#">Kurtis</a>
-        <a href="#">Jeans</a>
+        <a href="#">Leggings</a>
       </div>
     </div>
-    <div>
+    <div class="menu-item">
+      <i class="fas fa-child"></i>
       Kids
       <div class="dropdown">
-        <a href="#">T-Shirts</a>
-        <a href="#">Shorts</a>
-        <a href="#">Dresses</a>
+        <a href="#">Boys</a>
+        <a href="#">Girls</a>
+        <a href="#">Baby Wear</a>
       </div>
     </div>
   </div>
-
-  <script>
-    function showLogin() {
-      alert("Login popup will open here.");
-    }
-    function showCart() {
-      alert("Cart popup with items will show here.");
-    }
-  </script>
 </body>
+
 </html>
