--- a/index.html
+++ b/index.html
@@ -1,200 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Snap+ITC&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Rubik', sans-serif;
+      font-family: Arial, sans-serif;
     }
-
     body {
-      background-color: #fff;
+      background: #fff;
       color: #333;
     }
-
-    .top-bar {
-      background: #000;
+    header {
+      background: linear-gradient(135deg, #ff0033, #ff6666);
       color: white;
-      display: flex;
-      justify-content: space-between;
-      padding: 8px 20px;
-      font-size: 14px;
-    }
-
-    .navbar {
-      background-color: white;
+      padding: 15px 20px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 10px 20px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
+      position: relative;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
-
     .logo {
       display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-    .logo h1 {
-      color: red;
-      font-size: 30px;
-      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
-    }
-
-    .logo span {
-      font-size: 10px;
-      color: #777;
-      margin-top: -4px;
-    }
-
-    .search-bar {
-      flex-grow: 1;
-      margin: 0 20px;
-    }
-
-    .search-bar input {
-      width: 100%;
-      max-width: 450px;
-      padding: 8px 12px;
-      border: 1px solid #ccc;
-      border-radius: 20px;
-      font-size: 14px;
-    }
-
-    .actions {
-      display: flex;
       align-items: center;
-      gap: 20px;
+      font-family: 'Snap ITC', cursive;
+      font-size: 32px;
+      color: white;
+      text-shadow: 2px 2px #c00;
     }
-
-    .actions i {
-      font-size: 18px;
+    .logo small {
+      display: block;
+      font-size: 12px;
+      margin-top: -5px;
+      text-shadow: none;
+    }
+    .search-bar {
+      flex: 1;
+      margin: 0 30px;
+      display: flex;
+      justify-content: center;
+    }
+    .search-bar input {
+      width: 60%;
+      padding: 10px 15px;
+      border-radius: 25px;
+      border: none;
+      font-size: 16px;
+    }
+    .icons {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+    }
+    .icons i {
+      font-size: 20px;
       cursor: pointer;
       transition: transform 0.2s ease;
     }
-
-    .actions i:hover {
+    .icons i:hover {
       transform: scale(1.1);
     }
-
-    .menu-bar {
+    nav {
+      background: #fff;
+      padding: 10px 20px;
       display: flex;
-      justify-content: center;
       gap: 40px;
-      padding: 10px 0;
-      background: #f8f8f8;
+      justify-content: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     }
-
-    .menu-item {
+    nav .menu-item {
       position: relative;
       cursor: pointer;
-      text-align: center;
-      transition: color 0.3s ease;
+      transition: 0.3s;
     }
-
-    .menu-item i {
-      font-size: 18px;
+    nav .menu-item:hover .dropdown {
       display: block;
-      margin-bottom: 3px;
-      color: #444;
     }
-
-    .menu-item:hover {
-      color: red;
+    nav .menu-item i {
+      margin-right: 5px;
     }
-
     .dropdown {
+      display: none;
       position: absolute;
-      top: 40px;
+      top: 30px;
       left: 0;
       background: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       padding: 10px;
       border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      display: none;
-      z-index: 10;
     }
-
-    .menu-item:hover .dropdown {
-      display: block;
+    .dropdown p {
+      padding: 5px 10px;
+      cursor: pointer;
     }
-
-    .dropdown a {
-      display: block;
-      padding: 5px;
-      color: #333;
-      text-decoration: none;
-    }
-
-    .dropdown a:hover {
+    .dropdown p:hover {
       background: #eee;
-      border-radius: 4px;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+    .modal-content {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      min-width: 300px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
+    }
+    .modal-content h3 {
+      margin-bottom: 20px;
+    }
+    .modal-content input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    .modal-content button {
+      padding: 10px 20px;
+      background: #ff0033;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
   </style>
 </head>
-
 <body>
-  <div class="top-bar">
-    <div>Free Shipping</div>
-    <div>Return To Store</div>
-    <div>Help</div>
-  </div>
-
-  <nav class="navbar">
-    <div class="logo">
-      <h1>FA-Tshirt</h1>
-      <span>FA-Tshirt</span>
-    </div>
+  <header>
+    <div class="logo">FA-Tshirt<br><small>FA-Tshirt</small></div>
     <div class="search-bar">
       <input type="text" placeholder="What are you looking for?">
     </div>
-    <div class="actions">
-      <i class="fas fa-user"></i>
-      <i class="fas fa-shopping-cart"></i>
+    <div class="icons">
+      <i class="fas fa-user" onclick="openLogin()"></i>
+      <i class="fas fa-shopping-cart" onclick="openCart()"></i>
+    </div>
+  </header>
+
+  <nav>
+    <div class="menu-item"><i class="fas fa-male"></i> Men
+      <div class="dropdown">
+        <p>T-Shirts</p>
+        <p>Shirts</p>
+        <p>Jeans</p>
+      </div>
+    </div>
+    <div class="menu-item"><i class="fas fa-female"></i> Women
+      <div class="dropdown">
+        <p>Tops</p>
+        <p>Kurtis</p>
+        <p>Leggings</p>
+      </div>
+    </div>
+    <div class="menu-item"><i class="fas fa-child"></i> Kids
+      <div class="dropdown">
+        <p>T-Shirts</p>
+        <p>Frocks</p>
+        <p>Shorts</p>
+      </div>
     </div>
   </nav>
 
-  <div class="menu-bar">
-    <div class="menu-item">
-      <i class="fas fa-male"></i>
-      Men
-      <div class="dropdown">
-        <a href="#">T-Shirts</a>
-        <a href="#">Shirts</a>
-        <a href="#">Jeans</a>
-      </div>
-    </div>
-    <div class="menu-item">
-      <i class="fas fa-female"></i>
-      Women
-      <div class="dropdown">
-        <a href="#">Tops</a>
-        <a href="#">Kurtis</a>
-        <a href="#">Leggings</a>
-      </div>
-    </div>
-    <div class="menu-item">
-      <i class="fas fa-child"></i>
-      Kids
-      <div class="dropdown">
-        <a href="#">Boys</a>
-        <a href="#">Girls</a>
-        <a href="#">Baby Wear</a>
-      </div>
+  <!-- Login Modal -->
+  <div class="modal" id="loginModal">
+    <div class="modal-content">
+      <h3>Login to FA-Tshirt</h3>
+      <input type="text" placeholder="Email or Phone">
+      <input type="password" placeholder="Password">
+      <button>Login</button>
     </div>
   </div>
-</body>
 
+  <!-- Cart Modal -->
+  <div class="modal" id="cartModal">
+    <div class="modal-content">
+      <h3>Your Cart</h3>
+      <p>No items added yet.</p>
+    </div>
+  </div>
+
+  <script>
+    function openLogin() {
+      document.getElementById("loginModal").style.display = "flex";
+    }
+    function openCart() {
+      document.getElementById("cartModal").style.display = "flex";
+    }
+    window.onclick = function(e) {
+      if (e.target.classList.contains('modal')) {
+        e.target.style.display = "none";
+      }
+    }
+  </script>
+</body>
 </html>
