--- a/index.html
+++ b/index.html
@@ -4,207 +4,167 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Snap+ITC&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Snap+ITC&display=swap');
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+    }
+
+    body {
+      background-color: #FF0000; /* Red theme */
+      color: white;
       font-family: Arial, sans-serif;
     }
-    body {
-      background: #fff;
-      color: #333;
-    }
+
     header {
-      background: linear-gradient(135deg, #ff0033, #ff6666);
-      color: white;
-      padding: 15px 20px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      position: relative;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .logo {
-      display: flex;
       align-items: center;
+      padding: 20px;
+      background-color: #111;
+    }
+
+    .logo {
       font-family: 'Snap ITC', cursive;
       font-size: 32px;
       color: white;
-      text-shadow: 2px 2px #c00;
+      text-shadow: 2px 2px #000;
     }
-    .logo small {
-      display: block;
-      font-size: 12px;
-      margin-top: -5px;
-      text-shadow: none;
-    }
-    .search-bar {
-      flex: 1;
-      margin: 0 30px;
-      display: flex;
-      justify-content: center;
-    }
-    .search-bar input {
-      width: 60%;
-      padding: 10px 15px;
-      border-radius: 25px;
-      border: none;
-      font-size: 16px;
-    }
-    .icons {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-    }
-    .icons i {
-      font-size: 20px;
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-    .icons i:hover {
-      transform: scale(1.1);
-    }
-    nav {
-      background: #fff;
-      padding: 10px 20px;
-      display: flex;
-      gap: 40px;
-      justify-content: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    }
-    nav .menu-item {
-      position: relative;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    nav .menu-item:hover .dropdown {
-      display: block;
-    }
-    nav .menu-item i {
-      margin-right: 5px;
-    }
-    .dropdown {
-      display: none;
-      position: absolute;
-      top: 30px;
-      left: 0;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      padding: 10px;
-      border-radius: 8px;
-    }
-    .dropdown p {
-      padding: 5px 10px;
-      cursor: pointer;
-    }
-    .dropdown p:hover {
-      background: #eee;
-    }
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0, 0, 0, 0.5);
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-    .modal-content {
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      min-width: 300px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.3);
-    }
-    .modal-content h3 {
-      margin-bottom: 20px;
-    }
-    .modal-content input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    .modal-content button {
-      padding: 10px 20px;
-      background: #ff0033;
+
+    nav a {
       color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      font-family: 'Snap ITC', cursive;
+      text-shadow: 3px 3px #000;
+    }
+
+    .hero p {
+      font-size: 20px;
+      margin-top: 15px;
+    }
+
+    .cta-button {
+      margin-top: 30px;
+      padding: 12px 30px;
+      background-color: white;
+      color: #FF0000;
+      font-weight: bold;
       border: none;
-      border-radius: 5px;
       cursor: pointer;
+      border-radius: 5px;
+      transition: transform 0.2s;
+    }
+
+    .cta-button:hover {
+      transform: scale(1.05);
+    }
+
+    .banner {
+      display: flex;
+      justify-content: center;
+      padding: 40px 20px;
+      background-color: #f5f5f5;
+      color: #111;
+    }
+
+    .banner div {
+      max-width: 600px;
+      text-align: center;
+    }
+
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 40px 20px;
+    }
+
+    .product-card {
+      background-color: white;
+      color: #111;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+
+    .product-card img {
+      max-width: 100%;
+      border-radius: 5px;
+    }
+
+    .product-card h3 {
+      margin-top: 10px;
+    }
+
+    footer {
+      background-color: #111;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="logo">FA-Tshirt<br><small>FA-Tshirt</small></div>
-    <div class="search-bar">
-      <input type="text" placeholder="What are you looking for?">
-    </div>
-    <div class="icons">
-      <i class="fas fa-user" onclick="openLogin()"></i>
-      <i class="fas fa-shopping-cart" onclick="openCart()"></i>
-    </div>
+    <div class="logo">FA-Tshirt</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Shop</a>
+      <a href="#">Collections</a>
+      <a href="#">Login</a>
+      <a href="#">Cart</a>
+    </nav>
   </header>
 
-  <nav>
-    <div class="menu-item"><i class="fas fa-male"></i> Men
-      <div class="dropdown">
-        <p>T-Shirts</p>
-        <p>Shirts</p>
-        <p>Jeans</p>
-      </div>
-    </div>
-    <div class="menu-item"><i class="fas fa-female"></i> Women
-      <div class="dropdown">
-        <p>Tops</p>
-        <p>Kurtis</p>
-        <p>Leggings</p>
-      </div>
-    </div>
-    <div class="menu-item"><i class="fas fa-child"></i> Kids
-      <div class="dropdown">
-        <p>T-Shirts</p>
-        <p>Frocks</p>
-        <p>Shorts</p>
-      </div>
-    </div>
-  </nav>
+  <section class="hero">
+    <h1>Too Cool To Be Basic</h1>
+    <p>Wear your vibe. Shop the trendiest tees now!</p>
+    <button class="cta-button">Shop Now</button>
+  </section>
 
-  <!-- Login Modal -->
-  <div class="modal" id="loginModal">
-    <div class="modal-content">
-      <h3>Login to FA-Tshirt</h3>
-      <input type="text" placeholder="Email or Phone">
-      <input type="password" placeholder="Password">
-      <button>Login</button>
+  <section class="banner">
+    <div>
+      <h2>Trending Now</h2>
+      <p>Get your hands on the quirkiest and boldest designs made for you. No filters. No apologies.</p>
     </div>
-  </div>
+  </section>
 
-  <!-- Cart Modal -->
-  <div class="modal" id="cartModal">
-    <div class="modal-content">
-      <h3>Your Cart</h3>
-      <p>No items added yet.</p>
+  <section class="products">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x250" alt="T-shirt 1">
+      <h3>Unisex Graphic Tee</h3>
+      <p>₹299</p>
     </div>
-  </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x250" alt="T-shirt 2">
+      <h3>Oversized FA-Tee</h3>
+      <p>₹349</p>
+    </div>
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x250" alt="T-shirt 3">
+      <h3>Minimalist Vibe Tee</h3>
+      <p>₹279</p>
+    </div>
+  </section>
 
-  <script>
-    function openLogin() {
-      document.getElementById("loginModal").style.display = "flex";
-    }
-    function openCart() {
-      document.getElementById("cartModal").style.display = "flex";
-    }
-    window.onclick = function(e) {
-      if (e.target.classList.contains('modal')) {
-        e.target.style.display = "none";
-      }
-    }
-  </script>
+  <footer>
+    &copy; 2025 FA-Tshirt. All rights reserved.
+  </footer>
 </body>
 </html>
