--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Snap+ITC&display=swap');
-
     * {
       margin: 0;
       padding: 0;
@@ -14,157 +15,162 @@
     }
 
     body {
-      background-color: #FF0000; /* Red theme */
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #d90000;
       color: white;
-      font-family: Arial, sans-serif;
     }
 
     header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 20px;
-      background-color: #111;
+      justify-content: space-between;
+      background-color: #d90000;
+      padding: 10px 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     .logo {
-      font-family: 'Snap ITC', cursive;
-      font-size: 32px;
-      color: white;
-      text-shadow: 2px 2px #000;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-
-    .hero {
-      text-align: center;
-      padding: 50px 20px;
-    }
-
-    .hero h1 {
-      font-size: 48px;
-      font-family: 'Snap ITC', cursive;
-      text-shadow: 3px 3px #000;
-    }
-
-    .hero p {
-      font-size: 20px;
-      margin-top: 15px;
-    }
-
-    .cta-button {
-      margin-top: 30px;
-      padding: 12px 30px;
-      background-color: white;
-      color: #FF0000;
-      font-weight: bold;
-      border: none;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: transform 0.2s;
-    }
-
-    .cta-button:hover {
-      transform: scale(1.05);
-    }
-
-    .banner {
       display: flex;
-      justify-content: center;
-      padding: 40px 20px;
-      background-color: #f5f5f5;
-      color: #111;
+      flex-direction: column;
+      align-items: center;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 24px;
+      font-weight: bold;
+      text-shadow: 1px 1px 4px #000;
     }
 
-    .banner div {
-      max-width: 600px;
-      text-align: center;
+    .logo small {
+      font-size: 12px;
     }
 
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    nav {
+      display: flex;
       gap: 20px;
-      padding: 40px 20px;
     }
 
-    .product-card {
-      background-color: white;
-      color: #111;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      text-align: center;
+    nav div {
+      position: relative;
     }
 
-    .product-card img {
-      max-width: 100%;
-      border-radius: 5px;
-    }
-
-    .product-card h3 {
-      margin-top: 10px;
-    }
-
-    footer {
-      background-color: #111;
+    nav button {
+      background: none;
+      border: none;
       color: white;
-      text-align: center;
-      padding: 20px;
+      font-size: 16px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+    }
+
+    nav div:hover .dropdown {
+      display: block;
+    }
+
+    .dropdown {
+      display: none;
+      position: absolute;
+      top: 30px;
+      background-color: white;
+      color: black;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .searchbar {
+      flex-grow: 1;
+      max-width: 400px;
+      margin: 0 20px;
+    }
+
+    .searchbar input {
+      width: 100%;
+      padding: 8px 10px;
+      border-radius: 20px;
+      border: none;
       font-size: 14px;
+    }
+
+    .actions {
+      display: flex;
+      gap: 15px;
+    }
+
+    .actions button {
+      background: white;
+      color: #d90000;
+      padding: 5px 10px;
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .main-banner {
+      background: url('https://via.placeholder.com/1200x400/ff0000/ffffff?text=FA-Tshirt+Banner') no-repeat center center/cover;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .main-banner h1 {
+      font-size: 40px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 20px;
+      border-radius: 10px;
     }
   </style>
 </head>
+
 <body>
   <header>
-    <div class="logo">FA-Tshirt</div>
+    <div class="logo">
+      FA-Tshirt
+      <small>FA-Tshirt</small>
+    </div>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Shop</a>
-      <a href="#">Collections</a>
-      <a href="#">Login</a>
-      <a href="#">Cart</a>
+      <div>
+        <button><i class="fas fa-male"></i> Men</button>
+        <div class="dropdown">
+          <p>T-Shirts</p>
+          <p>Shirts</p>
+          <p>Bottomwear</p>
+        </div>
+      </div>
+      <div>
+        <button><i class="fas fa-female"></i> Women</button>
+        <div class="dropdown">
+          <p>Tops</p>
+          <p>Dresses</p>
+          <p>Bottomwear</p>
+        </div>
+      </div>
+      <div>
+        <button><i class="fas fa-child"></i> Kids</button>
+        <div class="dropdown">
+          <p>Boys</p>
+          <p>Girls</p>
+        </div>
+      </div>
     </nav>
+    <div class="searchbar">
+      <input type="text" placeholder="Search for products..." />
+    </div>
+    <div class="actions">
+      <button onclick="alert('Login Popup')">Login</button>
+      <button onclick="alert('Cart View')">Cart</button>
+    </div>
   </header>
 
-  <section class="hero">
-    <h1>Too Cool To Be Basic</h1>
-    <p>Wear your vibe. Shop the trendiest tees now!</p>
-    <button class="cta-button">Shop Now</button>
+  <section class="main-banner">
+    <h1>Welcome to FA-Tshirt</h1>
   </section>
-
-  <section class="banner">
-    <div>
-      <h2>Trending Now</h2>
-      <p>Get your hands on the quirkiest and boldest designs made for you. No filters. No apologies.</p>
-    </div>
-  </section>
-
-  <section class="products">
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x250" alt="T-shirt 1">
-      <h3>Unisex Graphic Tee</h3>
-      <p>₹299</p>
-    </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x250" alt="T-shirt 2">
-      <h3>Oversized FA-Tee</h3>
-      <p>₹349</p>
-    </div>
-    <div class="product-card">
-      <img src="https://via.placeholder.com/200x250" alt="T-shirt 3">
-      <h3>Minimalist Vibe Tee</h3>
-      <p>₹279</p>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 FA-Tshirt. All rights reserved.
-  </footer>
 </body>
+
 </html>
