--- a/index.html
+++ b/index.html
@@ -1,70 +1,179 @@
-<header class="flex items-center justify-between px-4 py-2 bg-red-600 text-white shadow-md">
-  <!-- Logo -->
-  <div class="flex items-center space-x-2">
-    <div class="text-2xl font-bold" style="font-family: 'Snap ITC', cursive; text-shadow: 2px 2px #000;">
-      FA-Tshirt
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    body {
+      background-color: #c1121f;
+      color: white;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 30px;
+      background-color: #c1121f;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo {
+      font-size: 28px;
+      font-weight: 700;
+      font-family: "Snap ITC", cursive;
+      text-shadow: 2px 2px 5px #000;
+    }
+
+    .search-bar {
+      flex: 1;
+      margin: 0 30px;
+      position: relative;
+    }
+
+    .search-bar input {
+      width: 100%;
+      padding: 10px 15px;
+      border-radius: 30px;
+      border: none;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      outline: none;
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
+      gap: 25px;
+    }
+
+    nav .dropdown {
+      position: relative;
+    }
+
+    nav .dropdown:hover .submenu {
+      display: block;
+    }
+
+    .submenu {
+      display: none;
+      position: absolute;
+      top: 30px;
+      background-color: white;
+      color: black;
+      padding: 10px;
+      border-radius: 6px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    }
+
+    .submenu a {
+      display: block;
+      text-decoration: none;
+      color: black;
+      padding: 5px 0;
+    }
+
+    .icons {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      font-size: 18px;
+    }
+
+    .icons i {
+      cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    .icons i:hover {
+      transform: scale(1.2);
+    }
+
+    .popup-box {
+      display: none;
+      position: absolute;
+      right: 30px;
+      top: 60px;
+      background: white;
+      color: black;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      z-index: 1000;
+    }
+
+    .show {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="logo">FA-Tshirt</div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search for products..." />
     </div>
-  </div>
-
-  <!-- Search Bar -->
-  <div class="flex-1 mx-8">
-    <input type="text" placeholder="Search for products..." class="w-full px-4 py-2 rounded-lg text-black" />
-  </div>
-
-  <!-- Right Icons -->
-  <div class="flex items-center space-x-6">
-    <div class="cursor-pointer hover:text-gray-200">❤️</div>
-    <div class="relative group cursor-pointer">
-      🛒
-      <!-- Cart Popup -->
-      <div class="absolute right-0 mt-2 hidden group-hover:block w-64 bg-white text-black p-4 shadow-xl rounded-lg z-50">
-        <p class="font-semibold">Your Cart is empty</p>
+    <nav>
+      <div class="dropdown">
+        <span>Men 👔</span>
+        <div class="submenu">
+          <a href="#">T-Shirts</a>
+          <a href="#">Oversized</a>
+          <a href="#">Joggers</a>
+        </div>
       </div>
-    </div>
-    <div class="relative group cursor-pointer">
-      👤
-      <!-- Login Popup -->
-      <div class="absolute right-0 mt-2 hidden group-hover:block w-64 bg-white text-black p-4 shadow-xl rounded-lg z-50">
-        <p class="font-semibold mb-2">Login to your account</p>
-        <input type="text" placeholder="Email" class="w-full mb-2 px-2 py-1 border rounded" />
-        <input type="password" placeholder="Password" class="w-full mb-2 px-2 py-1 border rounded" />
-        <button class="w-full bg-red-600 text-white py-1 rounded">Login</button>
+      <div class="dropdown">
+        <span>Women 👗</span>
+        <div class="submenu">
+          <a href="#">Tops</a>
+          <a href="#">T-Shirts</a>
+          <a href="#">Shorts</a>
+        </div>
       </div>
+      <div class="dropdown">
+        <span>Mobile Covers 📱</span>
+        <div class="submenu">
+          <a href="#">iPhone</a>
+          <a href="#">Samsung</a>
+        </div>
+      </div>
+    </nav>
+    <div class="icons">
+      <i class="fas fa-heart"></i>
+      <i class="fas fa-shopping-cart" onclick="togglePopup('cartBox')"></i>
+      <i class="fas fa-user" onclick="togglePopup('loginBox')"></i>
     </div>
+  </header>
+
+  <div id="loginBox" class="popup-box">
+    <h4>Login</h4>
+    <input type="text" placeholder="Username" /><br><br>
+    <input type="password" placeholder="Password" /><br><br>
+    <button>Login</button>
   </div>
-</header>
 
-<!-- Navigation Bar with Hover Popups -->
-<nav class="bg-red-500 text-white px-6 py-2 shadow">
-  <ul class="flex space-x-6">
-    <li class="relative group">
-      <span class="cursor-pointer">Men</span>
-      <ul class="absolute hidden group-hover:block bg-white text-black mt-2 p-2 shadow-lg rounded z-50">
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">T-Shirts</li>
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Shirts</li>
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Jeans</li>
-      </ul>
-    </li>
-    <li class="relative group">
-      <span class="cursor-pointer">Women</span>
-      <ul class="absolute hidden group-hover:block bg-white text-black mt-2 p-2 shadow-lg rounded z-50">
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Tops</li>
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Kurtis</li>
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Jeans</li>
-      </ul>
-    </li>
-    <li class="relative group">
-      <span class="cursor-pointer">Mobile Covers</span>
-      <ul class="absolute hidden group-hover:block bg-white text-black mt-2 p-2 shadow-lg rounded z-50">
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">iPhone</li>
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Samsung</li>
-        <li class="px-4 py-1 hover:bg-gray-200 cursor-pointer">Xiaomi</li>
-      </ul>
-    </li>
-  </ul>
-</nav>
+  <div id="cartBox" class="popup-box">
+    <h4>Your Cart</h4>
+    <p>No items in cart.</p>
+  </div>
 
-<!-- Add any other sections here -->
-<main class="p-4">
-  <h1 class="text-3xl font-bold text-center text-red-700">Welcome to FA-Tshirt</h1>
-</main>
+  <script>
+    function togglePopup(id) {
+      const box = document.getElementById(id);
+      box.classList.toggle('show');
+    }
+  </script>
+</body>
+</html>
