--- a/index.html
+++ b/index.html
@@ -1,179 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FA-Tshirt</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Montserrat', sans-serif;
-    }
-
-    body {
-      background-color: #c1121f;
-      color: white;
-    }
-
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 30px;
-      background-color: #c1121f;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    .logo {
-      font-size: 28px;
-      font-weight: 700;
-      font-family: "Snap ITC", cursive;
-      text-shadow: 2px 2px 5px #000;
-    }
-
-    .search-bar {
-      flex: 1;
-      margin: 0 30px;
-      position: relative;
-    }
-
-    .search-bar input {
-      width: 100%;
-      padding: 10px 15px;
-      border-radius: 30px;
-      border: none;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      outline: none;
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 25px;
-    }
-
-    nav .dropdown {
-      position: relative;
-    }
-
-    nav .dropdown:hover .submenu {
-      display: block;
-    }
-
-    .submenu {
-      display: none;
-      position: absolute;
-      top: 30px;
-      background-color: white;
-      color: black;
-      padding: 10px;
-      border-radius: 6px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-    }
-
-    .submenu a {
-      display: block;
-      text-decoration: none;
-      color: black;
-      padding: 5px 0;
-    }
-
-    .icons {
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      font-size: 18px;
-    }
-
-    .icons i {
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-
-    .icons i:hover {
-      transform: scale(1.2);
-    }
-
-    .popup-box {
-      display: none;
-      position: absolute;
-      right: 30px;
-      top: 60px;
-      background: white;
-      color: black;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
-      z-index: 1000;
-    }
-
-    .show {
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <div class="logo">FA-Tshirt</div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search for products..." />
-    </div>
-    <nav>
-      <div class="dropdown">
-        <span>Men 👔</span>
-        <div class="submenu">
-          <a href="#">T-Shirts</a>
-          <a href="#">Oversized</a>
-          <a href="#">Joggers</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <span>Women 👗</span>
-        <div class="submenu">
-          <a href="#">Tops</a>
-          <a href="#">T-Shirts</a>
-          <a href="#">Shorts</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <span>Mobile Covers 📱</span>
-        <div class="submenu">
-          <a href="#">iPhone</a>
-          <a href="#">Samsung</a>
-        </div>
-      </div>
-    </nav>
-    <div class="icons">
-      <i class="fas fa-heart"></i>
-      <i class="fas fa-shopping-cart" onclick="togglePopup('cartBox')"></i>
-      <i class="fas fa-user" onclick="togglePopup('loginBox')"></i>
-    </div>
-  </header>
-
-  <div id="loginBox" class="popup-box">
-    <h4>Login</h4>
-    <input type="text" placeholder="Username" /><br><br>
-    <input type="password" placeholder="Password" /><br><br>
-    <button>Login</button>
+<header class="bg-red-600 text-white shadow-md p-4 flex items-center justify-between">
+  <!-- Logo -->
+  <div class="flex items-center">
+    <h1 class="text-3xl font-bold" style="font-family: 'Snap ITC', cursive; text-shadow: 2px 2px #000">FA_Tshirt</h1>
   </div>
 
-  <div id="cartBox" class="popup-box">
-    <h4>Your Cart</h4>
-    <p>No items in cart.</p>
+  <!-- Search Bar -->
+  <div class="flex-1 px-6">
+    <input type="text" placeholder="Search products..." class="w-full p-2 rounded-full text-black" />
   </div>
 
-  <script>
-    function togglePopup(id) {
-      const box = document.getElementById(id);
-      box.classList.toggle('show');
-    }
-  </script>
-</body>
-</html>
+  <!-- Icons -->
+  <div class="flex items-center space-x-4">
+    <button class="hover:text-yellow-300">❤️ Wishlist</button>
+    <button class="hover:text-yellow-300">🛒 Cart</button>
+    <button class="hover:text-yellow-300">👤 Login</button>
+  </div>
+</header>
+
+<main class="bg-white text-black">
+  <!-- Homepage Highlights -->
+  <section class="my-4">
+    <div class="bg-red-100 p-4 rounded-lg text-center text-xl font-semibold">Big Banner Slider (Sales | New Launches | Offers)</div>
+  </section>
+
+  <section class="my-4">
+    <h2 class="text-lg font-bold mb-2">Trending Now</h2>
+    <div class="flex space-x-4 overflow-x-auto">
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Product 1</div>
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Product 2</div>
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Product 3</div>
+    </div>
+  </section>
+
+  <section class="my-4">
+    <h2 class="text-lg font-bold mb-2">Hot Deals</h2>
+    <div class="flex space-x-4 overflow-x-auto">
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Deal 1</div>
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Deal 2</div>
+    </div>
+  </section>
+
+  <section class="my-4">
+    <h2 class="text-lg font-bold mb-2">Top Picks</h2>
+    <div class="flex space-x-4 overflow-x-auto">
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Top 1</div>
+      <div class="w-40 h-60 bg-gray-200 flex items-center justify-center">Top 2</div>
+    </div>
+  </section>
+
+  <section class="my-4 text-sm space-x-2">
+    <span class="bg-red-600 text-white px-2 py-1 rounded">Under ₹299</span>
+    <span class="bg-red-600 text-white px-2 py-1 rounded">Best Sellers</span>
+    <span class="bg-red-600 text-white px-2 py-1 rounded">Buy 1 Get 1</span>
+  </section>
+
+  <!-- Product Grid -->
+  <section class="grid grid-cols-4 gap-4 my-6">
+    <div class="relative group bg-gray-100 rounded-lg overflow-hidden">
+      <img src="https://via.placeholder.com/300x400" alt="Product" class="w-full h-full object-cover group-hover:opacity-0 transition duration-300"/>
+      <img src="https://via.placeholder.com/300x400/000000/ffffff?text=Alt+View" alt="Hover View" class="absolute inset-0 w-full h-full object-cover opacity-0 group-hover:opacity-100 transition duration-300" />
+      <div class="p-2">Men's Tshirt</div>
+    </div>
+    <!-- Repeat above product block as needed -->
+  </section>
+
+  <!-- Filters & Sorting (Mock) -->
+  <aside class="p-4 bg-gray-50">
+    <h3 class="font-bold mb-2">Filters</h3>
+    <div>Size | Price | Category</div>
+    <h3 class="font-bold mt-4 mb-2">Sort By</h3>
+    <select class="border p-1">
+      <option>Popularity</option>
+      <option>Price: Low to High</option>
+      <option>Price: High to Low</option>
+    </select>
+  </aside>
+
+  <!-- Quick View Mockup -->
+  <div class="p-4 mt-6 bg-gray-100 text-center">Quick View modal trigger area</div>
+</main>
+
+<!-- Footer Menu -->
+<footer class="fixed bottom-0 w-full bg-red-600 text-white p-2 flex justify-around">
+  <button>Home</button>
+  <button>Categories</button>
+  <button>Search</button>
+  <button>Wishlist</button>
+  <button>Cart</button>
+</footer>
+
+<!-- Checkout Steps (Mock) -->
+<section class="my-6 p-4 bg-yellow-100">
+  <h2 class="font-bold text-lg mb-2">Checkout Steps</h2>
+  <ol class="list-decimal ml-4">
+    <li>Cart Review</li>
+    <li>Shipping Info</li>
+    <li>Payment</li>
+  </ol>
+  <p class="mt-2">Guest Checkout ✅ | Multiple Payment Options ✅ | Coupon Code Field ✅</p>
+</section>
