--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
   </header>
 
   <nav class="nav-categories">
-    <a href="#">Men</a>
-    <a href="#">Women</a>
-    <a href="#">Kids</a>
+    <a href="#">Men's</a>
+    <a href="#">Women's</a>
+    <a href="#">Kids's</a>
   </nav>
 </body>
 </html>
